[gd_scene load_steps=2 format=3 uid="uid://dqpxksylwkuht"]

[ext_resource type="Script" uid="uid://d0ky1e7hj1ju0" path="res://addons/zen_core/scene_manager/scene_handler.gd" id="1_qxlsh"]

[node name="SceneHandler" type="Node"]
script = ExtResource("1_qxlsh")

[node name="World2D" type="Node2D" parent="."]

[node name="World3D" type="Node3D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
